# orderwise-agent

./: .gitignore  .pypirc.template  LICENSE  MANIFEST.in  NOTICE  README.md  README_PYPI.md  README_en.md  env.sh  main.py  pyproject.toml  requirements.txt  setup.py  start-listener.sh  start-mcp-server-tmux.sh  start-mcp-server.sh
.github/workflows/: publish.yml  publish_pypi.yml  python-publish.yml
benchmark/: README.md  compare_results.py  runner.py  utils.py
benchmark/adapters/: __init__.py  autoglm_adapter.py  common.py  orderwise_adapter.py
benchmark/configs/: benchmark_config.yaml
benchmark/configs/framework_configs/: autoglm.yaml  orderwise.yaml
benchmark/core/: __init__.py  base_adapter.py  evaluator.py  metrics.py  task_definition.py
benchmark/tasks/: waimai_compare_tasks.json
docs/: WECHAT.md  quick_start.md
examples/: __init__.py  app_device_mapping.json  apps_config.json  sdk_usage.py
mcp_mode/: README.md  __init__.py
mcp_mode/mcp_client/: mcp_client_example.py
mcp_mode/mcp_server/: model_config.yaml  order_wise_mcp_backend.py  order_wise_mcp_server.py  server_config.yaml  session_manager.py
orderwise-agent/: README.md  README_en.md
orderwise_agent/: __init__.py  __main__.py
orderwise_agent/cli/: __init__.py  mcp.py  mcp_server.py  utils.py
orderwise_agent/core/: __init__.py  compare.py
phone_agent/: agent.py
phone_agent/actions/: handler.py
phone_agent/adb/: screenshot.py
phone_agent/config/: listener_devices.py  prompts_zh.py
phone_agent/model/: client.py
phone_agent/utils/: __init__.py  device_manager.py  mongodb_listener.py  mongodb_writer.py  orderwise_logger.py  parallel_executor.py  price_extractor.py  screenshot_cache.py
sandbox/: README.md  build_template.py  compare_prices.py  configure_sandbox.py  view_logs.py
